2010-05-11  Jan Hubicka  <jh@suse.cz>

	* lto-symtab.c (lto_symtab_free): New function.
	* lto-streamer.h (lto_symtab_free): Declare.

2010-05-11  Jan Hubicka  <jh@suse.cz>

	* lto-cgraph.c (reachable_from_other_partition_p): Export; do not assume
	that if function is needed it is reachable.
	(lto_output_node): See if it the function is reachable or referenced.
	(output_cgraph): Update call of lto_output_node.
	* lto-streamer.h (reachable_from_other_partition_p): Declare.

2010-05-11  Jan Hubicka  <jh@suse.cz>

	* crtstuff.c (__JCR_LIST__, __DTOR_END__, __JCR_END__, __FRAME_END__):
	Mark as used.

2010-05-11  Jan Hubicka  <jh@suse.cz>

	PR tree-optimize/44063
	* ipa-inline.c (cgraph_edge_badness): Move always inlines to top of queue.
	(cgraph_decide_inlining_of_small_function): Skip check when disrgarding
	limits.
	(estimate_function_body_sizes): Compute sizes even when disregarding.

2010-05-11  Kai Tietz  <kai.tietz@onevision.com>

	* collect2.c (maybe_lto_object_file): Add x64-coff magic and check.

2010-05-11  Jan Hubicka  <jh@suse.cz>

	* lto-cgraph.c (output_cgraph): Remove loop adding all varpool nodes
	into every boundary.

2010-05-11  Jan Hubicka  <jh@suse.cz>

	* matrix-reorg.c (matrix_reorg): Rebuild edges.

2010-05-11  Jan Hubicka  <jh@suse.cz>

	* lto-streamer.c (lto_streamer_cache_add_to_node_array,
	lto_streamer_cache_delete): Put nodes into heap.
	* lto-streamer.h (struct lto_streamer_cache_d): Nodes vector is in
	heap.

2010-05-11  Jan Hubicka  <jh@suse.cz>

	* cgraphbuild.c (cgraph_rebuild_references): New.
	* cgraph.c (cgraph_mark_reachable_node): Accept references to optimized
	out extern inlines.
	* cgraph.h (cgraph_rebuild_references): Declare.
	* tree-inline.c (tree_function_versioning): Use it.
	* ipa-struct-reorg.c (do_reorg_for_func): Likewise.

2010-05-11  Jan Hubicka  <jh@suse.cz>

	* cgraph.c: Include ipa-utils.h
	(cgraph_create_virtual_clone): Update references.
	* Makefile.in (cgraph.o): Add dependency at ipa-utils.h
