@@ -4,7 +4,7 @@
    and during the instantiation of template functions.
 
    Copyright (C) 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007,
-		 2008, 2009 Free Software Foundation, Inc.
+		 2008, 2009, 2010 Free Software Foundation, Inc.
    Written by Mark Mitchell (mmitchell@usa.net) based on code found
    formerly in parse.y and pt.c.
 
@@ -610,13 +610,6 @@ finish_expr_stmt (tree expr)
 	{
 	  if (warn_sequence_point)
 	    verify_sequence_points (expr);
-	  if (TREE_CODE (expr) != MODIFY_EXPR)
-	    /* Expr is not being 'used' here, otherwise we whould have
-	       called mark_{rl}value_use use here, which would have in turn
-	       called mark_exp_read. Rather, we call mark_exp_read directly
-	       to avoid some warnings when
-	        -Wunused-but-set-{variable,parameter} is in effect.  */
-	    mark_exp_read (expr);
 	  expr = convert_to_void (expr, "statement", tf_warning_or_error);
 	}
       else if (!type_dependent_expression_p (expr))
