@@ -1,3 +1,9 @@
+2010-05-11  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/44062
+	* c-c++-common/Wunused-var-7.c: New test.
+	* g++.dg/warn/Wunused-var-9.C: New test.
+
 2010-05-11  Daniel Franke  <franke.daniel@gmail.com>
 
         PR fortran/43711
